gitops/base/orderui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-ui-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-ui
  template:
    metadata:
      labels:
        app: order-ui
    spec:
      containers:
        - name: order-ui
          image: 'gsavino/ordersampleui:1.0'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
