gitops/base/orderui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order-ui
spec:
  selector:
    app: order-ui
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
